<resources>
    <string name="app_name">iDaBere</string>

    <!-- Strings samples -->
    <string name="bar_list_bar_name">Bar name</string>
    <string name="menu_list_item_name">Item name</string>
    <string name="menu_list_item_price">000.00</string>
    <string name="menu_list_item_currency">€</string>
    <string-array name="counter_position_list">
        <item>Primo piano</item>
        <item>Secondo piano</item>
    </string-array>
    <string-array name="table_number_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="title_activity_login">Autenticazione</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entra</string>
    <string name="action_register">Registrati</string>
    <string name="error_invalid_email">Indirizzo email invalido</string>
    <string name="error_incorrect_password">Password incorretta</string>
    <string name="error_field_required">Il campo non deve essere vuoto</string>

    <!-- Strings related to list bar -->
    <string name="title_activity_seach_bar">Ricerca Locale</string>
    <string name="closed_title_label">CHIUSO</string>

    <!-- Strings related to seach bar barMenu-->
    <string name="title_menu_seach_bar_icon">Cerca per nome</string>
    <string name="title_clear_search_bar_icon">Cancella</string>
    <string name="title_qr_scanner_icon">Scan QR code</string>
    <string name="title_burger_menu_icon">Menu</string>

    <string name="search_bar_label">Search bar</string>
    <string name="search_hint">Cerca Bar</string>

    <!-- Strings related to item info -->
    <string name="title_item_info">Informazioni Prodotto</string>
    <string name="add_to_preferred_button">Aggiungi ai preferiti</string>
    <string name="item_info_description_title">Descrizione del prodotto</string>
    <string name="item_info_description_content">Testo descrizione del prodotto</string>

    <!-- Strings related to barMenu -->
    <string name="search_list_item_icon_label">Cerca Ordine</string>
    <string name="random_list_item_icon_label">Ordine Random</string>
    <string name="add_new_drink_button">Aggiungi Scelta</string>
    <string name="item_info_button_label">Dettagli</string>
    <string name="review_order_button_label">Carrello</string>
    <string name="deals_category_name">Offerte</string>

    <string name="category_name">Categoria</string>

    <!-- Strings related to QR Code scanner -->
    <string name="title_qr_code_scanner_login">Scansione QR</string>
    <string name="scan">Avvia Scansione</string>

    <!-- Strings related to Checkout -->
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_payment_type">Pagamento</string>
    <string name="title_total_price">Totale</string>
    <string name="title_confirm_payment">Conferma</string>

    <!-- Strings related to GPS Loading -->
    <string name="gps_loading_menu_label">Caricamento</string>

    <!-- Strings related to Add Choice -->
    <string name="add_chioce_modal_title">Nuovo Elemento</string>
    <string name="sizes_label_title">Dimensione</string>
    <string name="additions_label_title">Aggiunte</string>
    <string name="add_choice_button_label">Aggiungi</string>
    <string name="cancel_choice_button_label">Annulla</string>
    <string name="no_choice_description">Nessuna aggiunta</string>
    <string name="remove_choice_button_label">Rimuovi</string>

    <!-- Default sizes -->
    <string name="drinks_measure_units">cl</string>
    <string name="small_size_label">25</string>

    <!-- Strings related to Order status -->
    <string name="order_status_title_activity">Informazioni Ordine</string>
    <string name="identification_number_label">CODICE ORDINE</string>
    <string name="queue_number_label">POSIZIONE IN CODA</string>

    <!-- Strings related to Payment type -->
    <string name="title_payment_type_activity_title">Pagamento</string>
    <string name="payment_type_info">Seleziona il metodo di pagamento</string>
    <string name="credit_card_radio_button_label">Carta di credito</string>
    <string name="credit_card_info">Selezionado il pagamento tramite carta di credito l\'ordinazione verra\' inserito in coda non appena ricevuto</string>
    <string name="credit_card_choice_label">Numero carta:</string>

    <string name="cash_payment_info">Selezionando il pagamento tramite contanti si dovrà procedere al pagamento alla cassa. Successivamente l\'ordine verra\' inserito nella coda</string>
    <string name="cash_payment_button_label">Contanti</string>

    <!-- Strings related to Delivery Place -->
    <string name="title_delivery_place_activity_title">Consegna</string>
    <string name="delivery_place_info">Seleziona il metodo di consegna</string>
    <string name="counter_radio_button_label">Bancone</string>
    <string name="counter_place_info">Quando il tuo ordine sarà pronto verrà servito al bancone specificato</string>
    <string name="counter_choice_label">Posizione bancone:</string>

    <string name="table_place_info">Quanto il tuo ordine sarà pronto un cameriere provvederà a servirlo al tavolo specificato</string>
    <string name="table_choice_label">Numero tavolo:</string>
    <string name="table_radio_button_label">Tavolo</string>

    <!-- Strings related to Review order -->
    <string name="review_order_activity_title">Carrello</string>
    <string name="title_delivery_place">Consegna</string>
    <string name="title_menu_list">Menu</string>

    <!-- Strings related to Rate order -->
    <string name="rate_order_activity_title">Valutazioni Ordine</string>
    <string name="rate_confirm_button">Conferma</string>
    <string name="stars_number">5</string>
    <string name="no_location_detected">Abilita il GPS per avere una posizione precisa</string>
    <string name="gps_permission_rationale">Puoi abilitare i permessi per ottenere una posizione più precisa tramite GPS</string>
    <string name="permission_denied_explanation">Sono necessari i permessi per utilizzare i dati dal GPS</string>
    <string name="settings">Impostazioni</string>
    <string name="internet_permission_rationale">Sono necessari i permessi di connessione abilitati</string>
    <string name="bar_list_bar_details">via Milano , 56</string>
    <string name="bar_distance_value">130m</string>
    <string name="preferreds_added_banner">Aggiunto ai preferiti</string>
    <string name="add_preferred_button_label">Aggiungi ai preferiti</string>
    <string name="preferreds_category_name">Preferiti</string>
    <string name="wait_order_message">E\' necessario attendere che l\'ordine venga consegnato</string>
    <string name="no_connection_text">Abilitare una connessione dati</string>
    <string name="list_bar_activity_name">Ricerca Locale</string>
    <string name="login_text_button">Autenticati</string>
    <string name="proceed_order_button">Ordina</string>
    <string name="authentication_failed_message">Autenticazione non effettuata</string>
    <string name="server_error_text">Si è verificato un errore.\n Riprovare più tardi</string>
    <string name="no_data_error_text">Nessun risultato trovato</string>
    <string name="order_status_current_title">STATO DELL\'ORDINE</string>
    <string name="greetings_message">La tua ordinazione è conclusa.\n Grazie per aver usato iDaBere!</string>
    <string name="finish_button">Torna al Menu</string>
    <string name="credits_title">Credits</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="item_added_message">Aggiunto ai preferiti</string>
    <string name="item_removed_message">Rimosso dai preferiti</string>
    <string name="customer_guide_order">Customer instructions about what to do while waiting their order</string>

</resources>
