<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/sizeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_size_label"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="right">

        <TextView
            android:id="@+id/size_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_list_item_price"
            android:textSize="@dimen/paragraph_text_size"/>

        <TextView
            android:id="@+id/size_currency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_list_item_currency"
            android:textSize="@dimen/paragraph_text_size"/>

    </LinearLayout>


</LinearLayout>