<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="it.unitn.disi.lpsmt.idabere.activities.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/textView2"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        android:layout_above="@+id/welcome_login_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/login_text_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:id="@+id/welcome_proceed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_order_button"
        android:layout_below="@+id/welcome_login_button"
        android:layout_alignLeft="@+id/welcome_login_button"
        android:layout_alignStart="@+id/welcome_login_button"
        android:layout_alignRight="@+id/welcome_login_button"
        android:layout_alignEnd="@+id/welcome_login_button" />
    
</RelativeLayout>
