<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addition_choice_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="horizontal">


    <RadioButton
        android:id="@+id/choice_size_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_size_label"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/currency_right_margin"
        android:text="@string/menu_list_item_currency"
        android:textSize="@dimen/paragraph_text_size"
        android:id="@+id/currency_old"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/price_old"
        android:layout_toStartOf="@+id/price_old" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/discount_right_margin"
        android:text="@string/menu_list_item_price"
        android:textSize="@dimen/paragraph_text_size"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"

        android:id="@+id/price_old" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/size_price_label"
        android:layout_toStartOf="@+id/size_price_label"
        android:paddingRight="@dimen/currency_right_margin"
        android:text="@string/menu_list_item_currency"
        android:textSize="@dimen/paragraph_text_size"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/size_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:text="@string/menu_list_item_price"
        android:textSize="@dimen/paragraph_text_size" />


</RelativeLayout>