<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_place_info"
                android:textSize="@dimen/title_text_size"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/deliveries_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/first_delivery_choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/counter_radio_button_label"
                        android:textSize="@dimen/title_text_size" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/counter_place_info" />

                    <LinearLayout
                        android:id="@+id/first_delivery_choice_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:text="@string/counter_choice_label"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold"
                            android:layout_weight="1"/>

                        <Spinner
                            android:id="@+id/counters_drop_down"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                        </Spinner>


                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/second_delivery_choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/table_radio_button_label"
                        android:textSize="@dimen/title_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/table_place_info" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/second_delivery_choice_layout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:text="@string/table_choice_label"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold"
                            android:layout_weight="1" />

                        <Spinner
                            android:id="@+id/tables_drop_down"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                        </Spinner>

                    </LinearLayout>



                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:elevation="@dimen/elevation"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">




            <android.support.design.widget.BottomNavigationView
                android:id="@+id/delivery_bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:translationZ="-10sp"
                app:menu="@menu/delivery_bottom_navigation"
                app:itemIconTint="@drawable/nav_item_color_state"
                app:itemTextColor="@drawable/nav_item_color_state"/>




    </android.support.design.widget.AppBarLayout>

</RelativeLayout>