<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    tools:context="it.unitn.disi.lpsmt.idabere.activities.AddChoiceActivity"
    android:orientation="vertical">

    <!-- Size picker section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin">



        <TextView
            android:id="@+id/size_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/sizes_label_title"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/sizeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sizePricesGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:gravity="right">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Additions multiple choiche section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/additions_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/additions_label_title"
            android:textSize="@dimen/title_text_size"
            tools:text="@string/additions_label_title"
            android:textStyle="bold"/>

        <ListView
            android:id="@+id/additions_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_choice_button_label"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/cancel_chioce_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel_choice_button_label" />

    </LinearLayout>


</LinearLayout>
