<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <!-- Item basic infos -->

    <LinearLayout
        android:id="@+id/item_infos_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="5"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/menu_list_item_name"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">


        </LinearLayout>

        <!-- Total Quantity -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_total_qnty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="5"
                android:textAlignment="center"

                android:textStyle="bold" />
        </LinearLayout>

        <!-- Total Price -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center_vertical|right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/currency_right_margin"
                android:text="@string/menu_list_item_currency"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_total_price"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/menu_list_item_price"
                android:textStyle="bold" />



        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>
